crates/eosio_macros/tests/ui/symbol-bad-char.stderr
error: unexpected end of input, symbol contains invalid character 't'
 --> $DIR/symbol-bad-char.rs:6:13
  |
6 |     let _ = s!(4, "Test");
  |             ^^^^^^^^^^^^^
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
